div class partner 2 height to fix overflow

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -491,7 +491,7 @@ div#homesection3 > div > div > div > img {
     div.partner2 {
         display: grid;
         grid-template-columns: 400px 300px;
-        grid-template-rows: 700px;
+        grid-template-rows: 800px;
         width: 800px;
         margin-left: calc((100% - 800px)/2);
     }
